# MLPromos

./: .gitignore  LICENSE  README.md  docker-compose.yaml  mongo-init.js  personal-guide.md  project-hierarchy.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/mlmodel/: annotations.json  data.jsonl  model.ipynb  output.txt  outputfile  outputfile.json  scraper.py  scraperNB.ipynb  text_extraction_io_format_1.0.0.yaml  training_data.spacy
backend/mlmodel/model-best/ner/: moves
backend/src/: main.py
backend/src/database/: database.py
backend/src/modules/: model.py  parameters.py  test.ipynb
backend/src/modules/model-best/: meta.json
backend/src/modules/model-best/ner/: model
backend/src/modules/model-best/vocab/: strings.json
backend/src/services/: twitter.py
frontend/: .dockerignore  Dockerfile  nx.json  package-lock.json  package.json  project.json
frontend/src/: index.html  styles.sass  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  tweet-list.component.ts  tweet.component.ts  websocket.service.ts
frontend/src/app/environments/: environments.ts
frontend/src/app/services/: socket-service.service.ts
frontend/src/app/tweet/: tweet.component.spec.ts  tweet.component.ts
frontend/src/app/tweet-list/: tweet-list.component.spec.ts  tweet-list.component.ts
frontend/src/app/tweet-list-test-data/: tweet-list-test-data.component.spec.ts  tweet-list-test-data.component.ts
frontend/src/environments/: environment.development.ts
(+2 files in other folders)
