[tool.poetry]
name = "backend"
version = "1.0.0"
description = "scraper for promo codes using ML/AI"
authors = ["Ivan Aristy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
loguru = "^0.7.2"
websockets = "^11.0.3"
motor = "^3.3.1"
pymongo = "^4.5.0"
twscrape = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
